# vinculante

./: .gitignore  README.md  docker-compose-pro.yml  docker-compose.yml
engine/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  ruff.toml
engine/alembic/: env.py
engine/alembic/versions/: 067ecae576f1_section_text_markdown_and_rename.py  083eff051b19_target_document_summary.py  091e4fb15314_proposal_target_id.py  4591690ce321_author_nullable.py  4e7074d7beea_initial_models.py  a3f2c1d8e905_match_section_spans.py  bcb2c90c5497_section_is_matchable.py  c4e7f9a2b1d3_section_dl_meta.py  e3a9f2b1c847_target_document_stats.py  ef8b8cf37ec5_proposal_embedding.py  fd9abedf0c7d_target_documents_date_nullable.py
engine/data/eval/: testset.json
engine/data/eval/proposals/: clima.csv  educacion.csv  transporte.csv  vivienda.csv
engine/scripts/: extract_eval.py  extract_rationales.py  generate_large_eval_data.py
engine/tests/fixtures/: _generate_sample_target_pdf.py  proposals_basic.csv  proposals_with_empty.csv
engine/tests/integration/: conftest.py
engine/vinculante/: cli.py  main.py
engine/vinculante/application/clear_language/: generator_service.py  prompts.py
engine/vinculante/application/embedding/: embedder_service.py
engine/vinculante/application/evaluation/: evaluator_service.py  metrics.py  report_writer.py  resolver.py  retrieval_audit.py  testset.py
engine/vinculante/application/export/: match_exporter.py
engine/vinculante/application/ingestion/: proposal_ingestor.py  report_schemas.py  spanish_legal_classifier.py  target_ingestor.py
engine/vinculante/application/matching/: graph.py  (+5 more)
(+125 files in other folders)
