[project]
name = "vinculante-engine"
version = "0.1.0"
description = "Matching civil-society proposals to normative text sections"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.0",
    "fastapi>=0.135.3",
    "fastapi-cache2[redis]>=0.2.2",
    "jinja2>=3.1.0",
    "langchain>=1.2.9",
    "langchain-anthropic>=1.3.2",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-google-genai>=4.2.0",
    "langchain-mistralai>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.8",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.49",
    "tiktoken>=0.12.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
vinculante = "vinculante.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vinculante"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "ragas>=0.4.3",
    "ruff>=0.11.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
